--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <body>
+    <!-- bundle script must be placed at bottom of body tag despite the normal convention. -->
+    <div id='root'></div>
     <script src="bundle.js"></script>
   </body>
 </head>
