--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <body>
-    <!-- bundle script must be placed at bottom of body tag despite the normal convention. -->
-    <div id='root'></div>
-    <script src="bundle.js"></script>
-  </body>
+  <link rel="stylesheet" href="app.css"/>
 </head>
+<body>
+  <!-- bundle script must be placed at bottom of body tag despite the normal convention. -->
+  <div id='root'></div>
+  <script src="bundle.js"></script>
+</body>
 </html>
